syntax = "proto3";

import "google/api/annotations.proto";


package strings;
option go_package="pb/strings";
option java_multiple_files = true;
option java_outer_classname = "Strings";
option java_package = "com.strings.pb";


service Strings {
    rpc ToLower1 (String) returns (String) {
        option (google.api.http) = {
            post: "/strings/to_lower1"
            body: "*"
        };
    }
    rpc ToLower2 (String) returns (String) {
        option (google.api.http) = {
            post: "/strings/to_lower2"
            body: "snake_case"
        };
    }
    rpc ToLower3 (String) returns (String) {
        option (google.api.http) = {
            post: "/strings/to_lower3"
            body: "strtype"
        };
    }
    rpc ToLower4 (String) returns (String) {
        option (google.api.http) = {
            post: "/strings/to_lower4"
            body: "foo"
        };
    }
    rpc ToLower5 (String) returns (String) {
        option (google.api.http) = {
            post: "/strings/to_lower5"
            body: "foo.str"
        };
    }
}

message String {
    string snake_case = 1;
  StringType strtype = 2;
  FooObj foo =3;

}

message FooObj {
  string str = 1;
}

enum StringType {
  STRING_TYPE_FOO = 0;
  STRING_TYPE_BAR = 1;
  STRING_TYPE_BAZ = 2;
}